:sparkles: 213 feature additional type rental (#225)
* added new adType and new adjacent date field

* generated new client api

* :bug: fixed nullable rentalDate

* added rental to adCreation

* added universal display of adtype

* reworked filter for adtype to inluce rental

* reworked to be able to display rental type

* adjusted naming and use of enum type

* changed api to use string and multiple values

* adjusted api call to convert list to a string

* added i18n text

* added date selection for rental type

* added option for max rental date

* added option in setting menu

* edited setting store to allow addition of new settings. updated ui to show maaximum weeks for dates

* added mapping for rentalDate in backend

* conditionaly display the selection option and date in the overview

* :rotating_light: spotless

* :rotating_light:

* :rotating_light: pmd

* :rotating_light: removed unused

---------
