# anzeigen-frontend/src/api/swbrett/models/SettingTO.ts
@@ -79,7 +79,8 @@ export const SettingTOSettingNameEnum = {
     MAX_PAGE_SIZE: 'MAX_PAGE_SIZE',
     DEFAULT_SORTING: 'DEFAULT_SORTING',
     DEFAULT_ORDERING: 'DEFAULT_ORDERING',
-    MAX_ARCHIVE_DATE_RANGE: 'MAX_ARCHIVE_DATE_RANGE'
+    MAX_ARCHIVE_DATE_RANGE: 'MAX_ARCHIVE_DATE_RANGE',
+    MAX_RENTAL_DATE_RANGE: 'MAX_RENTAL_DATE_RANGE'
 } as const;
 export type SettingTOSettingNameEnum = typeof SettingTOSettingNameEnum[keyof typeof SettingTOSettingNameEnum];
 
